Fixed card-list appearance on mobiles with media query

--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -5,3 +5,12 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  .card-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 1em;
+    grid-row-gap: 20px;
+  }
+}
